--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.431</version>
+    <version>3.50</version>
     <!--<relativePath>../pom.xml</relativePath>-->
   </parent>
 
@@ -14,6 +14,10 @@
   <description>Build your scala project using sbt in Jenkins</description>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/sbt+plugin</url>
 
+  <properties>
+    <java.level>8</java.level>
+  </properties>
+
   <developers>
     <developer>
       <id>uzilan</id>
@@ -21,7 +25,7 @@
       <email>uzi.landsmann@gmail.com</email>
     </developer>
   </developers>
-  
+
   <licenses>
     <license>
       <name>The MIT License</name>
@@ -29,14 +33,14 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  
+
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/sbt-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/sbt-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/sbt-plugin</url>
     <tag>HEAD</tag>
   </scm>
-  
+
   <repositories>
     <repository>
       <id>repo.jenkins-ci.org</id>
@@ -55,8 +59,25 @@
   	<dependency>
   		<groupId>commons-lang</groupId>
   		<artifactId>commons-lang</artifactId>
-  		<version>2.5</version>
+  		<version>2.6</version>
   	</dependency>
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <showDeprecation>true</showDeprecation>
+            <compilerArgs>
+              <arg>-Xlint:all</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
 </project>
